--- a/Norte.html
+++ b/Norte.html
@@ -31,20 +31,21 @@
           </div>
         </div>
       </div>
-      <div class="navbar navbar-light" style="background-color: #a5a5a4;">
+      <div class="navbar navbar-dark" style="background-color: #052174">
         <div class="container d-flex justify-content-between">
           <a href="#" class="navbar-brand d-flex align-items-center">
-            <img src="Imagens/IMG2.jpg" width="70" height="70" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle> 
+            <img src="Imagens/IMG3-removebg-preview.png" width="70" height="70" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle> 
             <strong>Brasilis Agency</strong>
           </a>
-		    <a class="nav-item nav-link active text-white" href="index.html">Home</a>
-	  <a class="nav-item nav-link text-white" href="Norte.html">Norte</a>
-      <a class="nav-item nav-link text-white" href="Nordeste.html">Nordeste</a>
-      <a class="nav-item nav-link text-white" href="CentroOeste.html">Centro-Oeste</a>
-	  <a class="nav-item nav-link text-white" href="Sudeste.html">Sudeste</a>
-	  <a class="nav-item nav-link text-white" href="Sul.html">Sul</a>
-    <a class="text-success nav-item nav-link" href="entrar1.html">Login</a>
-    <a class="text-white nav-item nav-link" href="sign.html">Cadastro</a>
+      <a class="text-white active" href="index.html">Home <span class="sr-only">(Página atual)</span></a>
+      <a class= "text-white"  href="Norte.html">Norte</a>
+      <a class="text-white"  href="Nordeste.html">Nordeste</a>
+      <a class="text-white"  href="CentroOeste.html">Centro-Oeste</a>
+	  <a class="text-white" href="Sudeste.html">Sudeste</a>
+	  <a class= "text-white" href="Sul.html" >Sul</a>
+    <a class="text-warning nav-item nav-link" href="entrar1.html">Login</a>
+    <a class="text-warning nav-item nav-link" href="sign.html">Cadastro</a>
+    
     </div>
   </div>
 </nav>
