--- a/015.html
+++ b/015.html
@@ -76,13 +76,13 @@
 <div class="container">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="Imagens/cataratas0.jpg" width="400"  height="500"alt="Primeiro Slide">
+      <img class="d-block w-100" src="Imagens/AvenidaPaulista.jpg" width="400"  height="500"alt="Primeiro Slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="Imagens/cataratas2.jpg" width="400"  height="500" alt="Segundo Slide">
+      <img class="d-block w-100" src="Imagens/avenida.jpg" width="400"  height="500" alt="Segundo Slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="Imagens/cataratas1.jpg" width="400"  height="500" alt="Terceiro Slide">
+      <img class="d-block w-100" src="Imagens/avenida2.jpg width="400"  height="500" alt="Terceiro Slide">
     </div>
   </div>
  </div>
@@ -104,13 +104,13 @@
 </div>
 <section class="jumbotron text-center">
   <div class="container">
-    <h1 class="jumbotron-heading">Cataratas do Iguaçu</h1>
-    <p class="lead text-muted">Um dos pontos turísticos do Brasil mais dignos de estampar cartões-postais é, na verdade, um tesouro compartilhado com nossos hermanos. As Cataratas do Iguaçu, uma das mais incríveis formações da natureza, estão situadas na cidade de Foz do Iguaçu, exatamente na fronteira com a Argentina.
+    <h1 class="jumbotron-heading">Avenida Paulista</h1>
+    <p class="lead text-muted">A Avenida Paulista é o retrato fiel de São Paulo, encontra-se de tudo, gastronomia, cultura e lazer, ponto de encontro de muitas pessoas ao final da tarde.
 
   </p>
     
-      <a href="pag013.html" class="btn btn-primary my-2">Comprar</a>
-      <a href="Sul.html" class="btn btn-secondary my-2">Voltar ao Inicio</a>
+      <a href="pag015.html" class="btn btn-primary my-2">Comprar</a>
+      <a href="index.html" class="btn btn-secondary my-2">Voltar ao Inicio</a>
     </p>
   </div>
 </section>
