--- a/LoginFunc.html
+++ b/LoginFunc.html
@@ -14,13 +14,12 @@
 
     <!-- Custom styles for this template -->
     <link href="design.css" rel="stylesheet">
-    
   </head>
 
   <body class="text-center">
-    <form class="form-signin" method="POST" action="valida1.php"> 
+    <form class="form-signin" method="POST" action="Valida2.php"> 
       <img class="mb-4" src="Imagens/IMG2.jpg" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Preencha para entrar</h1>
+      <h1 class="h3 mb-3 font-weight-normal">Acesso Admin</h1>
       <label for="inputEmail" class="sr-only">Email</label>
       <input type="email"  name='email' id="inputEmail" class="form-control" placeholder="Email" required autofocus>
       <br>
@@ -32,7 +31,7 @@
         </label>
       </div>
       <button class="btn btn-lg btn-primary btn-block type=submit">Entrar</button>
-      <a href="AcessoFuncionario.html"><button class="btn btn-lg btn-primary btn-block type=submit">Acesso Adm</button></a>
+      
       <p class="mt-5 mb-3 text-muted">&copy; 2020-2021</p> 
     </form>
   </body>
