--- a/sign.html
+++ b/sign.html
@@ -40,7 +40,7 @@
             </div>
           </div>
         </div>
-      <div class="navbar navbar-light" style="background-color: #a5a5a4;">
+      <div class="navbar navbar-dark" style="background-color: #052174">
           <div class="container d-flex justify-content-between">
             <a href="#" class="navbar-brand d-flex align-items-center">
               <img src="Imagens/IMG2.jpg" width="70" height="70" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle> 
